--- a/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
+++ b/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
@@ -55,37 +55,60 @@
                                     <segue destination="Cmf-zh-YNe" kind="embed" id="skI-eN-cHZ"/>
                                 </connections>
                             </containerView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pXE-bB-kqQ">
-                                <rect key="frame" x="0.0" y="8" width="414" height="44"/>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pXE-bB-kqQ">
+                                <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="barTintColor" red="0.36078431372549019" green="0.36078431372549019" blue="0.36078431372549019" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <items>
-                                    <navigationItem id="Adj-qV-tHD">
-                                        <barButtonItem key="leftBarButtonItem" title="Menu" image="icons8-menu-24" id="weO-HT-pci">
-                                            <color key="tintColor" red="0.37806684165266696" green="0.40082577720207258" blue="0.39457707050167051" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <connections>
-                                                <action selector="buttonMenu:" destination="dii-J3-FAH" id="PDr-MB-UEo"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
+                                    <navigationItem id="Adj-qV-tHD"/>
                                 </items>
                             </navigationBar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="settings" translatesAutoresizingMaskIntoConstraints="NO" id="tlJ-Ea-6dc">
-                                <rect key="frame" x="70" y="8" width="46" height="41"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.50980392159999999" green="0.50980392159999999" blue="0.50980392159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Average Joe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pso-UO-8B3">
+                                <rect key="frame" x="86" y="29" width="98" height="22.333333333333329"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="g2S-yD-DKD">
+                                <rect key="frame" x="367" y="26" width="27" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="29" id="BCF-fe-igG"/>
+                                    <constraint firstAttribute="width" constant="27" id="iyP-X3-VvS"/>
+                                </constraints>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="settings" translatesAutoresizingMaskIntoConstraints="NO" id="wTs-JB-7xp">
+                                <rect key="frame" x="20" y="26" width="27" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="27" id="2rO-wi-bb7"/>
+                                    <constraint firstAttribute="height" constant="29" id="S1h-JH-y89"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1250 Coins" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S0n-zc-Gz9">
+                                <rect key="frame" x="253.33333333333334" y="29" width="88.666666666666657" height="23"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="wTs-JB-7xp" firstAttribute="top" secondItem="3vi-AD-TOI" secondAttribute="top" constant="26" id="Db5-2g-yNq"/>
+                            <constraint firstItem="Pso-UO-8B3" firstAttribute="top" secondItem="CiE-wu-fuP" secondAttribute="top" constant="9" id="O59-4j-qha"/>
+                            <constraint firstItem="g2S-yD-DKD" firstAttribute="leading" secondItem="S0n-zc-Gz9" secondAttribute="trailing" constant="25" id="R1L-Xd-F6k"/>
+                            <constraint firstItem="Pso-UO-8B3" firstAttribute="leading" secondItem="wTs-JB-7xp" secondAttribute="trailing" constant="39" id="S1V-AM-ib6"/>
                             <constraint firstItem="bDh-6b-fmt" firstAttribute="leading" secondItem="CiE-wu-fuP" secondAttribute="leading" id="XSw-fb-Let"/>
                             <constraint firstItem="CiE-wu-fuP" firstAttribute="trailing" secondItem="bDh-6b-fmt" secondAttribute="trailing" id="aF4-p9-Q29"/>
+                            <constraint firstItem="CiE-wu-fuP" firstAttribute="trailing" secondItem="g2S-yD-DKD" secondAttribute="trailing" constant="20" id="bTt-Mo-Zdr"/>
+                            <constraint firstItem="S0n-zc-Gz9" firstAttribute="top" secondItem="CiE-wu-fuP" secondAttribute="top" constant="9" id="d0E-60-JlL"/>
                             <constraint firstItem="zRb-Sz-wes" firstAttribute="top" secondItem="3vi-AD-TOI" secondAttribute="topMargin" id="dXe-vy-ZBn"/>
                             <constraint firstAttribute="bottomMargin" secondItem="zRb-Sz-wes" secondAttribute="bottom" id="e72-75-yns"/>
                             <constraint firstAttribute="bottomMargin" secondItem="bDh-6b-fmt" secondAttribute="bottom" id="ecB-Qu-dps"/>
+                            <constraint firstItem="wTs-JB-7xp" firstAttribute="leading" secondItem="CiE-wu-fuP" secondAttribute="leading" constant="20" id="fxW-0N-8CR"/>
                             <constraint firstItem="zRb-Sz-wes" firstAttribute="leading" secondItem="CiE-wu-fuP" secondAttribute="leading" id="g91-GO-oNV"/>
                             <constraint firstItem="bDh-6b-fmt" firstAttribute="top" secondItem="3vi-AD-TOI" secondAttribute="topMargin" id="hXX-Py-U14"/>
                             <constraint firstItem="CiE-wu-fuP" firstAttribute="trailing" secondItem="cWK-te-7h8" secondAttribute="trailing" id="iD9-9H-fxy"/>
+                            <constraint firstItem="g2S-yD-DKD" firstAttribute="top" secondItem="3vi-AD-TOI" secondAttribute="top" constant="26" id="iar-c1-3eL"/>
                             <constraint firstItem="cWK-te-7h8" firstAttribute="leading" secondItem="CiE-wu-fuP" secondAttribute="leading" id="pEz-Q4-UgV"/>
                             <constraint firstItem="cWK-te-7h8" firstAttribute="top" secondItem="3vi-AD-TOI" secondAttribute="topMargin" id="wxc-yR-dBg"/>
                             <constraint firstAttribute="bottomMargin" secondItem="cWK-te-7h8" secondAttribute="bottom" id="yVG-4E-RLc"/>
@@ -95,13 +118,18 @@
                             <outletCollection property="gestureRecognizers" destination="a6T-1o-QNu" appends="YES" id="GU8-rd-4LW"/>
                         </connections>
                     </view>
-                    <toolbarItems/>
+                    <toolbarItems>
+                        <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="Xg7-zy-A1e"/>
+                        <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="6mq-yh-ZuY"/>
+                    </toolbarItems>
                     <navigationItem key="navigationItem" id="wRg-So-fcg"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="constraintMenuLeft" destination="g91-GO-oNV" id="0dP-w7-6RG"/>
                         <outlet property="constraintMenuWidth" destination="vya-8W-uh5" id="gJo-el-AKu"/>
                         <outlet property="gestureScreenEdgePan" destination="a6T-1o-QNu" id="eZp-Fr-MN0"/>
+                        <outlet property="profileLabel" destination="g2S-yD-DKD" id="Nrf-OL-GRl"/>
+                        <outlet property="settingsLabel" destination="wTs-JB-7xp" id="Nyr-nu-yRt"/>
                         <outlet property="viewBlack" destination="bDh-6b-fmt" id="jvk-GZ-63y"/>
                         <outlet property="viewMenu" destination="zRb-Sz-wes" id="g5u-WN-yx5"/>
                     </connections>
@@ -1135,7 +1163,7 @@
         <image name="Foresight Logo Final" width="348" height="108"/>
         <image name="back-white" width="173" height="293"/>
         <image name="carsIcon" width="24" height="24"/>
-        <image name="icons8-menu-24" width="24" height="24"/>
+        <image name="profile" width="160" height="210"/>
         <image name="settings" width="190" height="190"/>
         <image name="trophy" width="200" height="260"/>
     </resources>
